--- a/package.json
+++ b/package.json
@@ -9,22 +9,38 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.114.6",
+    "@react-three/fiber": "^8.17.10",
+    "@sentry/nextjs": "^8.35.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.9",
     "mini-svg-data-uri": "^1.4.4",
+    "motion": "^10.18.0",
     "next": "14.2.15",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.5.4"
+    "react-icons": "^5.3.0",
+    "react-lottie": "^1.2.4",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-colors": "^2.0.0",
+    "three": "^0.169.0",
+    "three-globe": "^2.33.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-lottie": "^1.2.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://nextjs.org/docs/app/api-reference/cli/create-next-app).",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
